# dioxus-form

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: form.rs
src/: deserializer.rs  lib.rs  serializer.rs
