[package]
name = "dioxus-form"
version = "0.1.1"
edition = "2021"
authors = ["Rhaskia"]
description = "Automatic form-serializer for dioxus"
readme = "README.md"
repository = "https://github.com/rhaskia/dioxus-form/"
homepage = "https://github.com/rhaskia/dioxus-form/"
keywords = ["dioxus", "forms", "gui", "ui", "input"]
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["serde_derive"] }
dioxus = "0.6"
serde_json = "1.0"
